--- a/res/layout/item_megfriend_list.xml
+++ b/res/layout/item_megfriend_list.xml
@@ -5,15 +5,32 @@
     android:gravity="center_vertical"
     android:orientation="horizontal" >
 
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp" />
     <TextView
         android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
-        android:textSize="25sp" />
+        android:textSize="15sp" />
+    
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="70px"
+        android:layout_height="70px"
+        android:adjustViewBounds="true"
+        android:layout_marginLeft="1dp" />
+    <LinearLayout 
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <TextView 
+            android:id="@+id/nickname"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"/>
+        <TextView
+            android:id="@+id/info"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"/>
+    </LinearLayout>
 </LinearLayout>
