--- a/res/layout/activity_signup.xml
+++ b/res/layout/activity_signup.xml
@@ -1,48 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1">
-    <include layout="@layout/item_sign_title"/>
+    android:orientation="vertical"
+    android:weightSum="1" >
+
+    <include layout="@layout/item_sign_title" />
 
     <EditText
         android:id="@+id/mail_signup_text"
         android:layout_width="310dp"
         android:layout_height="wrap_content"
-        android:hint="email"
-        android:maxLines="2"
-        android:layout_weight="0.10"
         android:layout_gravity="center"
-        android:layout_marginTop="65dip"/>
+        android:layout_marginTop="65dip"
+        android:layout_weight="0.10"
+        android:hint="email"
+        android:maxLines="2" />
 
     <EditText
         android:id="@+id/key_signup_text"
         android:layout_width="310dp"
         android:layout_height="wrap_content"
-        android:hint="password (at least 6 digits)"
-        android:maxLines="2"
-        android:layout_weight="0.10"
         android:layout_gravity="center"
-        android:layout_marginTop="10dip"/>
+        android:layout_marginTop="10dip"
+        android:layout_weight="0.10"
+        android:hint="password (at least 6 digits)"
+        android:inputType="textPassword"
+        android:maxLines="2" />
+
 
     <EditText
         android:id="@+id/key_ensure_signup_text"
         android:layout_width="310dp"
         android:layout_height="wrap_content"
-        android:hint="ensure password"
-        android:maxLines="2"
-        android:layout_weight="0.10"
         android:layout_gravity="center"
-        android:layout_marginTop="10dip"/>
+        android:layout_marginTop="10dip"
+        android:layout_weight="0.10"
+        android:hint="ensure password"
+        android:inputType="textPassword"
+        android:maxLines="2" />
+
+
     <Button
         android:id="@+id/signup"
         android:layout_width="310dp"
         android:layout_height="50dp"
-        android:background="@drawable/login_button"
-        android:text="sign  up"
-        android:onClick="onSignUp"
         android:layout_gravity="center"
-        android:layout_marginTop="35dip"/>
+        android:layout_marginTop="35dip"
+        android:background="@drawable/login_button"
+        android:onClick="onSignUp"
+        android:text="sign  up" />
 
 </LinearLayout>
