--- a/res/layout/activity_luancher_main.xml
+++ b/res/layout/activity_luancher_main.xml
@@ -7,13 +7,33 @@
     <com.bnutalk.lanunch.GuideViewPager
         android:id="@+id/viewpager_launcher"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_gravity="center" 
+         />
 
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
+        <Button
+            android:id="@+id/btLaunSignUp"
+            android:layout_width="100dp"
+            android:layout_height="60dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginBottom="40dip"
+            android:layout_marginLeft="20dip"
+            android:background="@drawable/ui_login_button2"
+             />
+
+        <Button
+            android:id="@+id/btLaunLogin"
+            android:layout_width="100dp"
+            android:layout_height="60dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:background="@drawable/ui_login_button1" />
         <LinearLayout
             android:id="@+id/viewGroup"
             android:layout_width="fill_parent"
@@ -24,4 +44,5 @@
             android:orientation="horizontal" >
         </LinearLayout>
     </RelativeLayout>
+
 </RelativeLayout>
