--- a/res/layout/item_sign_title.xml
+++ b/res/layout/item_sign_title.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
-    android:background="@drawable/title">
+    android:layout_height="50dp"
+    android:background="@drawable/title"
+    android:orientation="horizontal">
     <Button
         android:id="@+id/back_click"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+          android:layout_width="40dp"
+            android:layout_height="40dp"
         android:layout_gravity="center"
         android:layout_margin="5dip"
+         android:layout_weight="1"
         android:background="@drawable/back_click" />
     <TextView
         android:layout_width="0dip"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_weight="0.89"
-        android:layout_marginLeft="70dp"
-        android:text="BNUtalk"
+        android:layout_weight="20"
+        android:layout_marginLeft="30dp"
+        android:text="Bnutalk"
         android:textColor="#fff"
-        android:textSize="24sp"/>
+        android:textSize="20sp"/>
 </LinearLayout>
