--- a/res/layout/top_title.xml
+++ b/res/layout/top_title.xml
@@ -1,30 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" 
-    android:layout_gravity="center_horizontal|bottom"
-    android:layout_marginBottom="20dp"
+    android:layout_height="50dp"
+    android:background="@drawable/title"
     android:orientation="horizontal">
-    
-    <ImageView
-        android:id="@+id/blue_background"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:background="@drawable/blue_background" />
-    <Button 
-        android:id="@+id/bt_trans_to_main"
-        android:layout_marginTop="10dp"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:background="@drawable/trans_to_main"
-        />
+    <Button
+        android:id="@+id/back_click"
+          android:layout_width="40dp"
+            android:layout_height="40dp"
+        android:layout_gravity="center"
+        android:layout_margin="5dip"
+         android:layout_weight="1"
+        android:background="@drawable/back_click" />
     <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="100dp"
-                android:layout_marginTop="25dp"
-                android:text="好友选择"
-                android:textColor="#ffffffff"
-                android:textSize="25sp" />
-
-</RelativeLayout>
+        android:layout_width="0dip"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_weight="20"
+        android:layout_marginLeft="30dp"
+        android:text="Add Contacts"
+        android:textColor="#fff"
+        android:textSize="20sp"/>
+</LinearLayout>
