--- a/res/layout/item_add_contact.xml
+++ b/res/layout/item_add_contact.xml
@@ -139,7 +139,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:layout_marginLeft="20dp"
-                android:layout_marginTop="23dp"
+                android:layout_marginTop="20dp"
                 android:layout_toRightOf="@id/iv_card_flag3"
                 android:text="北京师范大学东操场"
                 android:textColor="#878787"
@@ -149,16 +149,18 @@
                 android:id="@+id/iv_card_flag4"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
+                android:layout_below="@id/iv_card_flag3" 
                 android:layout_marginLeft="30dp"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="15dp"
                 android:background="@drawable/college" />
 
             <TextView
                 android:id="@+id/card_college"
                 android:layout_width="wrap_content"
-                android:layout_height="30dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/card_address" 
                 android:layout_marginLeft="20dp"
-                android:layout_marginTop="53dp"
+                android:layout_marginTop="15dp"
                 android:layout_toRightOf="@id/iv_card_flag4"
                 android:text="经济与工商管理学院"
                 android:textColor="#878787"
@@ -168,16 +170,18 @@
                 android:id="@+id/iv_card_flag5"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
+                 android:layout_below="@id/card_college" 
+                 android:layout_marginTop="20dp"
                 android:layout_marginLeft="30dp"
-                android:layout_marginTop="80dp"
                 android:background="@drawable/music" />
 
             <ImageView
                 android:id="@+id/iv_card_flag6"
-                android:layout_width="200dp"
-                android:layout_height="30dp"
+                android:layout_width="220dp"
+                android:layout_height="40dp"
+                android:layout_below="@id/card_college" 
                 android:layout_marginLeft="20dp"
-                android:layout_marginTop="85dp"
+                android:layout_marginTop="20dp"
                 android:layout_toRightOf="@id/iv_card_flag5"
                 android:background="@drawable/music_borcast" />
         </RelativeLayout>
