--- a/res/layout/item_msgfriend_list.xml
+++ b/res/layout/item_msgfriend_list.xml
@@ -42,8 +42,8 @@
 
         <ImageView
             android:id="@+id/ivTipMes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+           android:layout_width="20px"
+            android:layout_height="20px" />
 
         <TextView
             android:id="@+id/tvTime"
