--- a/res/layout/item_add_contact_title.xml
+++ b/res/layout/item_add_contact_title.xml
@@ -5,7 +5,7 @@
     android:background="@drawable/title"
     android:orientation="horizontal">
     <Button
-        android:id="@+id/back_click"
+        android:id="@+id/btAddConBack"
           android:layout_width="40dp"
             android:layout_height="40dp"
         android:layout_gravity="center"
