--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
      <color name="white">#ffffffff</color>
      <color name="grey">#ff666666</color>
+     <color name="black">#00000000</color>
 </resources>
