--- a/res/layout/activity_settings.xml
+++ b/res/layout/activity_settings.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/blue_background">
+    android:layout_height="match_parent">
     <ImageView
         android:id="@+id/helloText"
         android:layout_width="150dp"
@@ -14,30 +13,22 @@
         android:id="@+id/user_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#fff"
-        android:textSize="30sp"
+        android:textColor="#000"
+        android:textSize="22sp"
         android:layout_below="@+id/helloText"
         android:layout_centerHorizontal="true" />
-    <ImageView
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:src="@drawable/word_list"
-        android:id="@+id/imageView2"
-        android:layout_centerVertical="true"
-        android:layout_toLeftOf="@+id/helloText"
-        android:layout_toStartOf="@+id/helloText" />
     <TextView
         android:id="@+id/word_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="word list"
-        android:textColor="#fff"
-        android:textSize="28sp"
+        android:textColor="#000"
+        android:textSize="24sp"
         android:layout_alignBottom="@+id/imageView2"
         android:layout_centerHorizontal="true" />
     <ImageView
-        android:layout_width="35dp"
-        android:layout_height="35dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:src="@drawable/setting"
         android:id="@+id/imageView4"
         android:layout_below="@+id/imageView2"
@@ -49,14 +40,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="settings"
-        android:textColor="#fff"
-        android:textSize="28sp"
+        android:textColor="#000"
+        android:textSize="24sp"
         android:layout_alignBottom="@+id/imageView4"
         android:layout_centerHorizontal="true" />
     <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/location"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:background="@drawable/address_picture"
         android:id="@+id/imageView6"
         android:layout_below="@+id/imageView4"
         android:layout_marginTop="20dp"
@@ -67,8 +58,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="location"
-        android:textColor="#fff"
-        android:textSize="28sp"
+        android:textColor="#000"
+        android:textSize="24sp"
         android:layout_alignBottom="@+id/imageView6"
         android:layout_centerHorizontal="true" />
     <ImageView
@@ -85,9 +76,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="sound"
-        android:textColor="#fff"
-        android:textSize="28sp"
+        android:textColor="#000"
+        android:textSize="24sp"
         android:layout_alignBottom="@+id/imageView3"
         android:layout_centerHorizontal="true" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_below="@+id/user_name"
+        android:layout_toLeftOf="@+id/helloText"
+        android:layout_toStartOf="@+id/helloText"
+        android:src="@drawable/word_list" />
 
 </RelativeLayout>
