--- a/res/layout/item_message.xml
+++ b/res/layout/item_message.xml
@@ -1,35 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="10dp">
+    android:padding="10dp" >
+
+    <ImageView
+        android:id="@+id/photo_receiver"
+        android:layout_width="80px"
+        android:layout_height="80px"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/ic_launcher" />
+
     <LinearLayout
         android:id="@+id/left_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_gravity="left"
-        android:background="@drawable/message_l">
+        android:layout_toRightOf="@+id/photo_receiver"
+        android:background="@drawable/message_r" >
+
         <TextView
             android:id="@+id/left_msg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="55dp"
-            android:textColor="#fff"/>
+            android:layout_margin="25dp"
+            android:textSize="16dp" />
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/photo_sender"
+        android:layout_width="80px"
+        android:layout_height="80px"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/right_layout"
+        android:src="@drawable/ic_launcher" />
+
     <LinearLayout
         android:id="@+id/right_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/left_layout"
         android:layout_gravity="right"
-        android:background="@drawable/message_r">
+        android:layout_toLeftOf="@+id/photo_sender"
+        android:background="@drawable/message_l" >
+
         <TextView
             android:id="@+id/right_msg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textSize="15dp"
-            android:layout_margin="60dp" />
+            android:layout_margin="25dp"
+            android:textSize="16dp" />
     </LinearLayout>
-</LinearLayout>
+
+</RelativeLayout>
