--- a/res/layout/item_message.xml
+++ b/res/layout/item_message.xml
@@ -26,7 +26,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="25dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginBottom="5dp"
             android:textSize="16dp" />
     </LinearLayout>
 
@@ -46,14 +47,13 @@
         android:layout_gravity="right"
         android:layout_toLeftOf="@+id/photo_sender"
         android:background="@drawable/message_l" >
-
         <TextView
             android:id="@+id/right_msg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="25dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginBottom="5dp"
             android:textSize="16dp" />
     </LinearLayout>
-
 </RelativeLayout>
