--- a/res/layout/item_msgfriend_list.xml
+++ b/res/layout/item_msgfriend_list.xml
@@ -45,11 +45,10 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:text="2016-5-15" />
-
         <ImageView
-            android:id="@+id/ivTipMes"
-            android:layout_width="30px"
-            android:layout_height="30px" />
+            android:id="@+id/ivTipMsg"
+            android:layout_width="40px"
+            android:layout_height="40px" />
     </LinearLayout>
 
 </RelativeLayout>
