--- a/res/layout/activity_sendmsg.xml
+++ b/res/layout/activity_sendmsg.xml
@@ -8,7 +8,7 @@
         android:layout_height="60dp"
         android:background="@drawable/title">
         <Button
-            android:id="@+id/back_personal_click"
+            android:id="@+id/bt_chat_back"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
