--- a/res/layout/activity_sendmsg.xml
+++ b/res/layout/activity_sendmsg.xml
@@ -49,7 +49,7 @@
             android:maxLines="2"/>
         <Button
             android:id="@+id/send"
-            android:layout_width="70dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:text="Send"/>
