--- a/res/layout/activity_signup.xml
+++ b/res/layout/activity_signup.xml
@@ -14,7 +14,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="65dip"
         android:layout_weight="0.10"
-        android:hint="email"
+        android:hint="BNU ID"
         android:maxLines="2" />
 
     <EditText
@@ -22,9 +22,10 @@
         android:layout_width="310dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="10dip"
-        android:layout_weight="0.10"
-        android:hint="password (at least 6 digits)"
+        android:layout_marginTop="15dip"
+        android:layout_marginLeft="15dip"
+        android:layout_marginRight="15dip"
+        android:hint="password(at least 6)"
         android:inputType="textPassword"
         android:maxLines="2" />
 
