bugfixes: 加最后一个好友bug;更新logo

--- a/res/layout/item_sign_title.xml
+++ b/res/layout/item_sign_title.xml
@@ -18,7 +18,7 @@
         android:layout_gravity="center"
         android:layout_weight="20"
         android:layout_marginLeft="30dp"
-        android:text="Bnutalk"
+        android:text="BNUtalk"
         android:textColor="#fff"
         android:textSize="20sp"/>
 </LinearLayout>
